@@ -1,3 +1,8 @@
+2010-12-13  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Highlevel lib: use dynamically resized hash table for looking up
+	by name and node ID.
+
 2010-11-10  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add new write_buf() method to the highlevel API.  Similarly to
